[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMTest"
version = "0.1.0"
description = "an easy-to-use LLM test framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "tqdm",
    "loguru>=0.7.3",
    "datasets>=4.0.0",
    "rouge_score>=0.1.2",
]

[project.urls]
Homepage = "https://github.com/SJTU-DDST/LLMTest"
Issues = "https://github.com/SJTU-DDST/LLMTest/issues"

[tool.setuptools]
package-dir = {"" = "src"}
